dataset1235/2025-2/805158916/users/3729362923/executions/71079933_359632665.log
== SUBMISSION (2025-08-11 15:10:02)
-- CODE: 
print("O valor que cada um deve desembolsar é:", round(250/6,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
O valor que cada um deve desembolsar é: 41.67
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
O valor que cada um deve desembolsar é: 41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-11 15:10:49)
-- CODE: 
print("O valor que cada um deve desembolsar é:", round(250/6,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
O valor que cada um deve desembolsar é: 41.67
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
O valor que cada um deve desembolsar é: 41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:09:25)
-- CODE: 
print("O valor que cada um deve desembolsar é:", 250/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
O valor que cada um deve desembolsar é: 41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
O valor que cada um deve desembolsar é: 41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:10:40)
-- CODE: 
print("O valor que cada um deve desembolsar é:", round(250/6,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
O valor que cada um deve desembolsar é: 41.67
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
O valor que cada um deve desembolsar é: 41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:09:50)
-- CODE: 
print("O valor que cada um deve desembolsar é:", round(250/6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
O valor que cada um deve desembolsar é: 42
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
O valor que cada um deve desembolsar é: 42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:10:26)
-- CODE: 
print("O valor que cada um deve desembolsar é:", round(250/6,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
O valor que cada um deve desembolsar é: 41.6667
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
O valor que cada um deve desembolsar é: 41.6667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:10:00)
-- CODE: 
print("O valor que cada um deve desembolsar é:", round(250/6,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
O valor que cada um deve desembolsar é: 41.67
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
O valor que cada um deve desembolsar é: 41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:09:19)
-- CODE: 
print("O valor que cada um deve desembolsar é:"250/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print("O valor que cada um deve desembolsar é:"250/6)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print("O valor que cada um deve desembolsar é:"250/6)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
